:pencil: Explain a little more

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <textarea id="input-zone" class="large-text" placeholder="Type here..." ></textarea>
-    <textarea id="subst-zone" placeholder="Put your substitutions here..."></textarea>
+    <textarea id="input-zone" class="large-text" placeholder="Type some stuff here..."></textarea>
+    <textarea id="subst-zone" placeholder="Put your substitutions here...">name:Press the N, A, M and E key simultaneously to input this!</textarea>
   </body>
 </html>
